--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.sample.firstapp.ContentFragments"></activity>
+        <activity android:name="com.sample.firstapp.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,18 +18,23 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".JsonActivity"
+            android:name="com.sample.firstapp.JsonActivity"
             android:label="@string/title_activity_json"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-            android:name=".DisplayMessageActivity"
-            android:parentActivityName=".MainActivity">
+            android:name="com.sample.firstapp.DisplayMessageActivity"
+            android:parentActivityName="com.sample.firstapp.MainActivity">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                android:value="com.sample.firstapp.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.sample.firstapp.fragments.UpViewFragment"
+            android:label="@string/go_to_fragments"
+            android:theme="@style/AppTheme">
         </activity>
     </application>
 
